--- a/webapp/webapp.csproj
+++ b/webapp/webapp.csproj
@@ -14,6 +14,8 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.SpaServices.Extensions" Version="3.1.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="3.1.0" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.0" />
   </ItemGroup>
 
   <ItemGroup>
@@ -21,6 +23,20 @@
     <Content Remove="$(SpaRoot)**" />
     <None Remove="$(SpaRoot)**" />
     <None Include="$(SpaRoot)**" Exclude="$(SpaRoot)node_modules\**" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Remove="ClientApp\src\app\_models\driver.model.ts" />
+    <None Remove="ClientApp\src\app\_models\inspection.model.ts" />
+    <None Remove="ClientApp\src\app\_models\notification.model.ts" />
+    <None Remove="ClientApp\src\app\_models\vehicle.model.ts" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <TypeScriptCompile Include="ClientApp\src\app\_models\driver.model.ts" />
+    <TypeScriptCompile Include="ClientApp\src\app\_models\inspection.model.ts" />
+    <TypeScriptCompile Include="ClientApp\src\app\_models\notification.model.ts" />
+    <TypeScriptCompile Include="ClientApp\src\app\_models\vehicle.model.ts" />
   </ItemGroup>
 
   <Target Name="DebugEnsureNodeEnv" BeforeTargets="Build" Condition=" '$(Configuration)' == 'Debug' And !Exists('$(SpaRoot)node_modules') ">
