--- a/desktopapp/desktopapp.csproj
+++ b/desktopapp/desktopapp.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\coreapp\coreapp.csproj" />
+    <ProjectReference Include="..\coreapp\core.csproj" />
   </ItemGroup>
 
   <ItemGroup>
