--- a/mvcapp/mvcapp.csproj
+++ b/mvcapp/mvcapp.csproj
@@ -10,7 +10,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\coreapp\coreapp.csproj" />
+    <ProjectReference Include="..\coreapp\core.csproj" />
   </ItemGroup>
 
 
