--- a/mvcapp/mvcapp.csproj
+++ b/mvcapp/mvcapp.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
@@ -10,6 +10,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\bl\bl.csproj" />
     <ProjectReference Include="..\coreapp\core.csproj" />
   </ItemGroup>
 
